syntax = "proto3";

option csharp_namespace = "Weather";
option go_package="github.com/salirezam/grpc-web/weather";

package weather;

service WeatherService {
        // Sends the current weather information
        rpc RequestCurrentWeatherData (WeatherRequest) returns (WeatherResult);

        // Sends the a stream of weather data
        rpc RequestHistoricData(WeatherRequest) returns ( WeatherHistoricReply);
        
}

// The request message containing the location
message WeatherRequest {
        int32 location = 1;
}

// The response message containing weather data
message WeatherResult {
        int32 temperature = 1;
        int32 windspeed = 2;
        int32 winddirection = 3;
        string location = 4;
}

// The response message containing historic weather data
message WeatherHistoricReply {
        repeated WeatherResult data = 1;
}